exports[`ObjectSchema filters out undefined and null values 1`] = `
Object {
  "entities": Object {
    "user": Object {
      "1": Object {
        "id": "1",
      },
      "undefined": Object {},
    },
  },
  "result": Object {
    "bar": "1",
  },
}
`;

exports[`ObjectSchema normalizes an object 1`] = `
Object {
  "entities": Object {
    "user": Object {
      "1": Object {
        "id": 1,
      },
    },
  },
  "result": Object {
    "user": 1,
  },
}
`;

exports[`ObjectSchema normalizes plain objects as shorthand for ObjectSchema 1`] = `
Object {
  "entities": Object {
    "user": Object {
      "1": Object {
        "id": 1,
      },
    },
  },
  "result": Object {
    "user": 1,
  },
}
`;
